ALIEN-1825: Remove the MaxPermSize java option